--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.1",
+    "@agm/core": "^1.0.0-beta.2",
+    "@agm/snazzy-info-window": "^1.0.0-beta.2",
     "@angular/animations": "^4.4.5",
     "@angular/cdk": "^2.0.0-beta.12",
     "@angular/common": "^4.2.4",
@@ -26,6 +27,7 @@
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.2",
+    "snazzy-info-window": "^1.1.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
