--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@types/googlemaps": "^3.30.0",
+    "angular4-social-login": "^1.0.13",
     "core-js": "^2.4.1",
     "ngx-pagination": "^3.0.3",
     "rxjs": "^5.4.2",
